--- a/src/views/styles/Container/bottomNav.scss
+++ b/src/views/styles/Container/bottomNav.scss
@@ -8,11 +8,27 @@
   .ant-layout-footer{
     background-color:white;
     // color: white;
- 
+    display: flex;
     padding: 10px 5px;
     color: rgba(143, 143, 143, 0.65);
     font-size: 14px;
+    justify-content: space-around;
     // background:;
+
+    .bottom-nav__item{
+      display: grid;
+      cursor: pointer;
+
+      .anticon{
+        font-size: 18px;
+      }
+      .anticon:hover{
+        color:$primary-color;
+      }
+      .bottom-nav__item__text {
+        font-size: 11px;
+      }
+    }
     
   }
 
