--- a/src/views/styles/Container/categoryLanding.scss
+++ b/src/views/styles/Container/categoryLanding.scss
@@ -5,6 +5,8 @@
   &__item {
     display: grid;
     margin: 5px;
+    height: 90px;
+    width: 70px;
     img{
       width: 70px;
       height: 70px;
