add share dialog box

--- a/src/views/styles/index.scss
+++ b/src/views/styles/index.scss
@@ -10,3 +10,9 @@ body{
 .ant-layout{
   background: white !important;
 }
+.ant-modal-confirm-title {
+  text-align: left;
+}
+.ant-modal-confirm-content{
+  margin: auto !important;
+}
